styled merchant fulfillment page

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,9 @@
 <article class="index row">
   <div class="row hero">
     <h3 class="orbit small-12 medium-6 columns" id="slogan">
-      Whatever your budget... We can break it.
+      Whatever your budget...
+      <br />
+      We can break it.
     </h3>
     <div class="orbit small-12 medium-6 columns top-photos" role="region" aria-label="Top Rated Products" data-orbit>
       <ul class="orbit-container top-photos">
