--- a/app/views/orders/incomplete.html.erb
+++ b/app/views/orders/incomplete.html.erb
@@ -1,4 +1,4 @@
-<article class="fullfilment">
+<article class="fulfillment">
   <div class="row title">
     <h3 class="small-12 columns">
       Order History
