added cart photos for items and styled quantity dropdown for product show

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -434,3 +434,12 @@ footer div p {
 table {
   font-family: 'Quattrocentro Sans', sans-serif;
 }
+
+label, select {
+  size: 2em;
+  font-family: 'Lato', sans-serif;
+}
+
+.cart-photo {
+  height: 100px;
+}
